testsuite/tests/builtins/pattern_methods/find/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(p.find())
   │       ────┬───  
   │           ╰───── Missing value for the "haystack" parameter
───╯
